--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -41,6 +41,8 @@ a {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  transform-style: flat;
+  perspective: 500px;
 }
 
 .page-enter-active {
