--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   align-items: center;
   margin-top: 58px;
-  // height: calc(100vh - 95px);
-
+  * {
+    z-index: 2;
+  }
   p {
     font-weight: bold;
     font-size: 38px;
@@ -152,5 +153,31 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .main-block {
+    margin-top: 27px;
+  }
+  .main-block p {
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+  }
+  .main-block .main-block__play-rules {
+    font-size: 14px;
+    line-height: 17px;
+    margin-top: 15px;
+  }
+  .main-block .main-block__btn {
+    font-size: 14px;
+  }
+  .main-block img {
+    height: 340px;
+    margin-top: 0;
+  }
+  .wtf-block {
+    display: none;
   }
 }
