--- a/src/components/MainFooter/mainFooter.scss
+++ b/src/components/MainFooter/mainFooter.scss
@@ -55,6 +55,9 @@
   }
   .footer .container {
     padding: 20px;
+    a {
+      margin-right: 0;
+    }
   }
 
   .footer .footer__first-line .footer__title {
