--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -20,6 +20,7 @@
     margin-top: 16px;
     height: 484px;
   }
+
   .main-block__play-rules {
     margin-top: 40px;
     font-weight: normal;
@@ -33,6 +34,9 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.95);
   }
   .main-block__btn {
+    &:active {
+      background-color: #17ca9b;
+    }
     border-radius: 50.0656px;
     border: 3px solid #17ca9b;
     color: white;
@@ -159,6 +163,9 @@
 @media screen and (max-width: 820px) {
   .main-block {
     margin-top: 27px;
+    a {
+      margin-right: 0;
+    }
   }
   .main-block p {
     font-size: 18px;
@@ -176,27 +183,23 @@
   .main-block img {
     height: 340px;
     margin-top: 0;
-    @media screen and (max-height: 775px) { 
+    @media screen and (max-height: 775px) {
       height: 300px;
     }
-    @media screen and (max-height: 712px) { 
+    @media screen and (max-height: 712px) {
       height: 270px;
     }
-    @media screen and (max-height: 669px) { 
+    @media screen and (max-height: 669px) {
       height: 240px;
     }
-    @media screen and (max-height: 631px) { 
+    @media screen and (max-height: 631px) {
       height: 220px;
     }
-    @media screen and (max-height: 607px) { 
+    @media screen and (max-height: 607px) {
       height: 190px;
     }
-
   }
   .wtf-block {
     display: none;
   }
-
-    
-
 }
