--- a/src/components/Containers/containers.scss
+++ b/src/components/Containers/containers.scss
@@ -1,25 +1,12 @@
 .main-container {
-  position: relative;
+  // position: relative;
   animation: darkAnima 0.5s linear backwards;
   height: 100%;
 }
 
 .dark-container {
-  --indent: 30vw;
-  --height: 136vh;
-  --size: 70%;
-  position: absolute;
-  left: calc(-1 * var(--indent));
-  right: calc(-1 * var(--indent));
-  top: 0;
-  padding-top: var(--height);
-  background: radial-gradient(
-      ellipse at 50% 40%,
-      rgba(0, 0, 0, 0.9) var(--size),
-      white calc(var(--size) + 0.1%)
-    )
-    no-repeat;
-
+  // width: 100%;
+  // height: 100%;
   .main-background__rect1 {
     position: absolute;
     border-bottom: 100px solid #fcd876;
@@ -27,7 +14,8 @@
   }
   .main-background__rect2,
   .main-background__rect4,
-  .main-background__rect3 {
+  .main-background__rect3,
+  .main-background__rect5 {
     position: absolute;
     width: 0;
     height: 0;
@@ -35,43 +23,61 @@
     border-right: 60px solid transparent;
     border-bottom: 90px solid #fcd876;
   }
+  .main-background__rect5 {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left: 90px solid transparent;
+    border-right: 90px solid transparent;
+    border-bottom: 130px solid #fcd876;
+  }
   .main-background__rect1 {
     top: 160px;
-    left: 30vw;
+    left: 0;
     transform: rotate(-10deg);
     animation: mainBackground__translate_TL-BR 8s infinite alternate;
   }
   .main-background__rect2 {
-    top: 700px;
-    left: 50vw;
+    top: 30%;
+    left: 10%;
     transform: rotate(15deg);
     border-bottom-color: black;
     animation: mainBackground__translate_TR-BL 8s infinite alternate;
   }
   .main-background__rect3 {
-    top: 700px;
-    left: 100vw;
+    top: 33%;
+    right: 17%;
     transform: rotate(15deg);
     border-bottom-color: #17ca9b;
     animation: mainBackground__translate_TL-BR 7s infinite alternate-reverse;
   }
   .main-background__rect4 {
-    top: 100px;
-    left: 120vw;
+    top: 7%;
+    right: 33px;
     transform: rotate(20deg);
     border-bottom-color: black;
     animation: mainBackground__translate_TR-BL 9s infinite alternate-reverse;
   }
+  .main-background__rect5 {
+    top: 52%;
+    left: 8%;
+    transform: rotate(20deg);
+    border-bottom-color: #fcd876;
+    animation: mainBackground__translate_TR-BL 12s infinite alternate-reverse;
+  }
   .main-background__circle1,
   .main-background__circle2,
   .main-background__circle3,
+  .main-background__circle5,
+  .main-background__circle6,
+  .main-background__circle7,
   .main-background__circle4 {
     position: absolute;
     border-radius: 50%;
   }
   .main-background__circle1 {
     top: 370px;
-    left: 22vw;
+    left: -100px;
     width: 204px;
     height: 224px;
     background: #e9e9e9;
@@ -79,15 +85,15 @@
   }
   .main-background__circle2 {
     top: 350px;
-    left: 120vw;
+    right: -177px;
     width: 294px;
     height: 294px;
     background: #979797;
     box-shadow: -4px 4px 10px rgba(183, 183, 183, 0.5);
   }
   .main-background__circle3 {
-    top: 250px;
-    left: 49vw;
+    top: 242px;
+    left: 28%;
     width: 82px;
     height: 82px;
     background: #c4c4c4;
@@ -96,10 +102,34 @@
   }
   .main-background__circle4 {
     top: 370px;
-    left: 100vw;
+    right: 28%;
     width: 70px;
     height: 70px;
     animation: mainBackground__translate_TL-BR 9s infinite alternate;
+    background: #fcd876;
+  }
+  .main-background__circle5 {
+    top: 50%;
+    left: 40px;
+    width: 40px;
+    height: 40px;
+    animation: mainBackground__translate_TL-BR 9s infinite alternate;
+    background: #17ca9b;
+  }
+  .main-background__circle6 {
+    top: 70%;
+    left: 10px;
+    width: 119px;
+    height: 119px;
+    animation: mainBackground__translate_TR-BL 9s infinite alternate;
+    background: black;
+  }
+  .main-background__circle7 {
+    bottom: 500px;
+    right: 10px;
+    width: 119px;
+    height: 119px;
+    animation: mainBackground__translate_TR-BL 9s infinite alternate;
     background: #fcd876;
   }
 }
@@ -136,76 +166,73 @@
 
 @media screen and (max-width: 1515px) {
   .dark-container {
-    --indent: 41vw;
-    --height: 118vh;
     .main-background__rect1 {
-      left: 37vw;
+      // left: 37vw;
     }
     .main-background__rect2 {
-      left: 58vw;
+      // left: 58vw;
     }
     .main-background__rect3 {
-      left: 118vw;
+      // left: 118vw;
     }
     .main-background__rect4 {
-      top: 143px;
-      left: 124vw;
+      // top: 143px;
+      // left: 124vw;
     }
     .main-background__circle1 {
-      left: 32vw;
-      top: 400px;
+      // left: 32vw;
+      // top: 400px;
     }
     .main-background__circle2 {
-      left: 132vw;
+      // left: 132vw;
     }
     .main-background__circle3 {
-      left: 62vw;
+      // left: 62vw;
     }
     .main-background__circle4 {
-      left: 109vw;
+      // left: 109vw;
     }
   }
 }
 
 @media screen and (max-width: 1140px) {
   .dark-container {
-    --indent: 73vw;
-    --height: 128vh;
     .main-background__rect1 {
-      left: 72vw;
+      // left: 72vw;
     }
     .main-background__rect2 {
-      left: 87vw;
+      // left: 87vw;
     }
     .main-background__rect3 {
-      left: 151vw;
+      // left: 151vw;
     }
     .main-background__rect4 {
-      left: 167vw;
+      // left: 167vw;
     }
     .main-background__circle1 {
-      left: 60vw;
+      // left: 60vw;
     }
     .main-background__circle2 {
-      left: 167vw;
+      // left: 167vw;
     }
     .main-background__circle3 {
-      display: none;
+      // display: none;
     }
     .main-background__circle4 {
-      display: none;
+      // display: none;
     }
   }
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 767px) {
   .dark-container {
-    --height: 75vh;
     .main-background__circle1,
     .main-background__circle2,
     .main-background__circle3,
     .main-background__circle4,
+    .main-background__rect1,
     .main-background__rect2,
-    .main-background__rect3 {
+    .main-background__rect3,
+    .main-background__rect4 {
       display: none;
     }
   }
