--- a/src/components/MainFooter/mainFooter.scss
+++ b/src/components/MainFooter/mainFooter.scss
@@ -46,13 +46,31 @@
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1320px) {
   .footer {
-    height: 87px;
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
+    height: 152px;
+    padding-bottom: 0;
   }
+  .footer .footer__first-line {
+    .footer__title {
+      font-size: 19px;
+    }
+    .footer__text {
+      font-size: 18px;
+    }
+  }
+  .footer .footer__second-line {
+    font-size: 19px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  // .footer {
+  //   height: 87px;
+  //   position: absolute;
+  //   bottom: 20px;
+  //   width: 100%;
+  // }
   .footer .container {
     padding: 20px;
     a {
