--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -6,7 +6,7 @@ body {
 }
 
 a {
-  margin-right: 30px;
+  // margin-right: 30px;
   text-decoration: none;
 }
 
@@ -30,19 +30,22 @@ a {
 
 .container {
   margin: auto;
-  max-width: 1740px;
-  padding: 0 10px;
+  max-width: 1780px;
+  padding: 0 40px;
   width: 100%;
 
 }
 
 .page {
-  position: absolute;
+  // position: absolute;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   transform-style: flat;
   perspective: 500px;
+  background: url('../assets/img/mainBg.png') no-repeat ;
+  background-position: center top;
+  // background-size: 100%;
 }
 
 .page-enter-active {
