--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -34,11 +34,13 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.95);
   }
   .main-block__btn {
-    &:active {
+    &:active,
+    &:hover {
       background-color: #17ca9b;
     }
     border-radius: 50.0656px;
     border: 3px solid #17ca9b;
+    width: 509px;
     color: white;
     font-weight: bold;
     padding: 13px 95px;
@@ -159,8 +161,12 @@
     }
   }
 }
-
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 900px) {
+  .main-block p {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
   .main-block {
     margin-top: 27px;
     a {
