--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 58px;
+  padding-top: 58px;
+  // min-height: 40vh;
   * {
     z-index: 2;
   }
@@ -15,10 +16,17 @@
       color: #17ca9b;
     }
   }
-
-  img {
-    margin-top: 16px;
+  .main-block__img-container {
+    position: relative;
     height: 484px;
+    width: 460px;
+    img {
+      // position: absolute;
+      // top: 0;
+      // left: 0;
+      margin-top: 16px;
+      height: 100%;
+    }
   }
 
   .main-block__play-rules {
@@ -41,6 +49,7 @@
     border-radius: 50.0656px;
     border: 3px solid #17ca9b;
     width: 509px;
+    height: 86px;
     color: white;
     font-weight: bold;
     padding: 13px 95px;
@@ -168,13 +177,14 @@
 }
 @media screen and (max-width: 767px) {
   .main-block {
-    margin-top: 27px;
+    padding-top: 27px;
     a {
       margin-right: 0;
     }
   }
   .main-block p {
     font-size: 18px;
+    max-width: 245px;
     line-height: 22px;
     text-align: center;
   }
@@ -185,25 +195,13 @@
   }
   .main-block .main-block__btn {
     font-size: 14px;
+    width: 200px;
+    height: 45px;
   }
-  .main-block img {
-    height: 340px;
+  .main-block .main-block__img-container {
+    height: 240px;
+    width: auto;
     margin-top: 0;
-    @media screen and (max-height: 775px) {
-      height: 300px;
-    }
-    @media screen and (max-height: 712px) {
-      height: 270px;
-    }
-    @media screen and (max-height: 669px) {
-      height: 240px;
-    }
-    @media screen and (max-height: 631px) {
-      height: 220px;
-    }
-    @media screen and (max-height: 607px) {
-      height: 190px;
-    }
   }
   .wtf-block {
     display: none;
