--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -54,6 +54,7 @@
     height: 100vh;
     width: 85%;
     top: -18px;
+    overflow-y: scroll;
     left: 0;
     background: #fffefe;
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -128,7 +129,7 @@
       display: flex; /* используем flex для центрирования содержимого */
       align-items: center; /* центрируем содержимое кнопки */
       position: absolute;
-      top: 15px;
+      top: 24px;
       right: 20px;
       width: 30px;
       height: 30px;
