--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -20,12 +20,13 @@
     position: relative;
     height: 484px;
     width: 460px;
+    margin-top: 40px;
     img {
       // position: absolute;
       // top: 0;
       // left: 0;
       margin-top: 16px;
-      height: 100%;
+      // height: 100%;
     }
   }
 
@@ -47,7 +48,7 @@
       background-color: #17ca9b;
     }
     border-radius: 50.0656px;
-    border: 3px solid #17ca9b;
+    border: 2px solid #17ca9b;
     width: 509px;
     height: 86px;
     color: white;
@@ -75,6 +76,7 @@
   margin: auto;
   margin-top: 195px;
   max-width: 1486px;
+  width: 85%;
   // height: calc(100vh - 95px);
   p {
     text-align: center;
@@ -105,6 +107,7 @@
       border-radius: 18.7299px;
       position: relative;
       width: 23.5%;
+      // width: 349px;
       height: 453px;
       padding: 40px 35px;
 
@@ -146,6 +149,7 @@
     .wtf-block__steps {
       .step-card {
         height: 390px;
+        width: 23.5%;
         p:first-child {
           font-size: 19px;
         }
@@ -174,6 +178,11 @@
   .main-block p {
     font-size: 30px;
   }
+  .wtf-block .wtf-block__steps .step-card {
+    p:first-child {
+      font-size: 24px;
+    }
+  }
 }
 @media screen and (max-width: 767px) {
   .main-block {
@@ -197,11 +206,22 @@
     font-size: 14px;
     width: 200px;
     height: 45px;
+    margin-top: 15px;
+    border-width: 2px;
   }
   .main-block .main-block__img-container {
     height: 240px;
-    width: auto;
+    // width: auto;
     margin-top: 0;
+    position: relative;
+    img {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      padding: 104px;
+      padding-top: 0;
+    }
   }
   .wtf-block {
     display: none;
