--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -24,7 +24,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.5s;
+  // transition: 0.5s;
 }
 
 .container {
