--- a/src/components/Containers/containers.scss
+++ b/src/components/Containers/containers.scss
@@ -1,6 +1,6 @@
 .main-container {
   // position: relative;
-  animation: darkAnima 0.5s linear backwards;
+  // animation: darkAnima 0.5s linear backwards;
   height: 100%;
   min-height: 100vh;
   display: flex;
