--- a/src/components/LK/Button/button.scss
+++ b/src/components/LK/Button/button.scss
@@ -1,26 +1,31 @@
 .lk-button {
-  width: 80px;
-  height: 80px;
-  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  p {
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+.lk-button__icon {
+  // background: #ffffff;
   box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  img {
-    // position: absolute;
-    // top: 0;
-    // bottom: 0;
-    // right: 0;
-    // left: 0;
-    // height: 70%;
-  }
+  width: 80px;
+  height: 80px;
+  margin-bottom: 20px;
   &:hover {
     background: #dadada;
   }
 }
-.lk-button.active {
+.lk-button__icon.active {
   background: #dadada;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
