--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -1,8 +1,7 @@
 .lk-content {
-  margin-top: 8px;
+  margin-top: 13px;
   width: 725px;
-  background: #ffffff;
-  border-radius: 20px;
+
   margin-left: 121px;
   @media screen and (max-width: 1508px) {
     margin-left: 70px;
@@ -14,163 +13,18 @@
   }
   .lk-content__block {
     padding: 49px 135px 33px 135px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.donate-block {
-  & > p {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    text-align: center;
-    color: #000000;
-  }
-  .donate-block__main-banner {
-    width: 433px;
-    height: 280px;
-    background: #2c2c2c;
-    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    background: #ffffff;
     border-radius: 20px;
+    @media screen and (max-width: 1508px) {
+      padding: 49px 85px 33px 85px;
+    }
+    @media screen and (max-width: 1508px) {
+      padding: 49px 45px 33px 45px;
+    }
     display: flex;
-    align-items: center;
     flex-direction: column;
-    padding: 50px 108px;
-    margin-bottom: 10px;
-    .donate-block__balance-title {
-      font-weight: 500;
-      font-size: 15.3004px;
-      line-height: 19px;
-      text-align: center;
-      color: rgba(255, 255, 255, 0.8);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      img {
-        margin-left: 7px;
-      }
-    }
-    .donate-block__balance {
-      font-weight: 600;
-      font-size: 91.8021px;
-      line-height: 112px;
-      text-align: center;
-      color: rgba(255, 255, 255, 0.9);
-      text-shadow: 0px 6.12014px 6.12014px rgba(255, 255, 255, 0.14);
-    }
-    .donate-block__sum {
-      padding: 7px 16px;
-      font-weight: normal;
-      font-size: 13.7703px;
-      line-height: 17px;
-      text-align: center;
-      color: rgba(255, 255, 255, 0.8);
-      border: 1.53004px solid rgba(255, 255, 255, 0.2);
-      border-radius: 7.65018px;
-    }
-  }
-
-  .donate-block__select-card {
-    display: flex;
-    justify-content: space-between;
-    width: 456px;
-    margin-top: 30px;
-    margin-bottom: 27px;
-    li {
-      list-style: none;
-      width: 84px;
-      height: 56px;
-      background: #ffffff;
-      border: 0.8px solid rgba(0, 0, 0, 0.6);
-      box-sizing: border-box;
-      border-radius: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-
-  .donate-block__input-card-block,
-  .donate-block__input-summ-block {
-    width: 100%;
-    p {
-      margin-bottom: 20px;
-      font-weight: normal;
-      font-size: 18px;
-      line-height: 22px;
-      color: rgba(0, 0, 0, 0.9);
-    }
-  }
-  .donate-block__input-card-block {
-    input {
-      width: 100%;
-      background: rgba(227, 227, 227, 0.7);
-      border-radius: 20px;
-      border: none;
-      padding: 16px 45px;
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 22px;
-      color: rgba(0, 0, 0, 0.7);
-      margin-bottom: 40px;
-      outline: none;
-    }
-  }
-  .donate-block__input-summ-block {
-    position: relative;
-    & > div {
-      display: flex;
-      height: 54px;
-      p {
-        margin-bottom: 0;
-        display: flex;
-        align-items: center;
-        width: 45px;
-        justify-content: center;
-        border-right: 1px solid #e7dddd;
-        background: rgba(227, 227, 227, 0.3);
-        border-radius: 20px 0 0 20px;
-        padding-left: 10px;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 24px;
-        color: rgba(0, 0, 0, 0.9);
-      }
-    }
-    input {
-      width: calc(50% - 45px);
-      height: 54px;
-      background: rgba(227, 227, 227, 0.3);
-      border-radius: 0 20px 20px 0;
-      border: none;
-      padding: 16px 25px 16px 55px;
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 22px;
-      color: rgba(0, 0, 0, 0.7);
-      outline: none;
-    }
-    margin-bottom: 20px;
-  }
-  .donate-block__small-text {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: rgba(0, 0, 0, 0.5);
-    white-space: nowrap;
-  }
-  .donate-block__btn {
-    background: #17ca9b;
-    margin-top: 32px;
-    border-radius: 50px;
-    width: 320px;
-    height: 59.61px;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    color: white;
   }
 }
