--- a/src/components/LK/LKNav/lknav.scss
+++ b/src/components/LK/LKNav/lknav.scss
@@ -16,6 +16,9 @@
   }
 }
 .lk-nav__block + .lk-nav__block {
+  @media screen and (max-width: 1508px) {
+    margin-top: 19px;
+  }
   margin-top: 47px;
 }
 
