--- a/src/pages/lk.scss
+++ b/src/pages/lk.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   max-width: 1508px;
-  padding: 0 50px;
+  padding: 0 50px 20px; 
   margin: auto;
   @media screen and (max-width: 1508px){
     max-width: 1208px;
