--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -8,8 +8,12 @@
     width: 630px;
   }
   @media screen and (max-width: 1208px) {
-    margin-left: 30px;
+    margin-left: 15px;
     width: 600px;
+  }
+  @media screen and (max-width: 1002px) {
+    margin-left: 0;
+    width: 740px;
   }
   .lk-content__block {
     padding: 49px 135px 33px 135px;
