--- a/src/components/LK/LKNav/lknav.scss
+++ b/src/components/LK/LKNav/lknav.scss
@@ -3,7 +3,11 @@
   flex-direction: column;
   justify-content: center;
   margin-top: 19px;
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
 }
+
 .lk-nav__block {
   width: 560px;
   height: 263px;
@@ -14,12 +18,23 @@
   @media screen and (max-width: 1208px) {
     width: 440px;
   }
+  @media screen and (max-width: 1002px) {
+    width: 740px;
+  }
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    height: auto;
+  }
 }
 .lk-nav__block + .lk-nav__block {
+  margin-top: 47px;
   @media screen and (max-width: 1508px) {
     margin-top: 19px;
   }
-  margin-top: 47px;
+  @media screen and (max-width: 767px) {
+    margin-top: 30px;
+
+  }
 }
 
 .lknav__nav-panel {
@@ -38,6 +53,12 @@
     display: flex;
     justify-content: space-between;
     // align-items: center;
+  }
+  @media screen and (max-width: 1002px) {
+    padding: 36px 115px 46px 115px;
+  }
+  @media screen and (max-width: 767px) {
+    padding: 20px 25px;
   }
 }
 
@@ -87,6 +108,39 @@
       margin-left: 35px;
     }
   }
+  @media screen and (max-width: 1002px) {
+    padding: 24px 97px;
+  }
+  @media screen and (max-width: 767px) {
+    padding: 15px 25px;
+    .balance-card__title {
+      font-size: 12px;
+      line-height: 219%;
+    }
+    .balance-card__balance {
+      font-weight: 500;
+      font-size: 35px;
+      line-height: 138%;
+    }
+    .balance-card__sum-block p {
+      font-size: 10px;
+      line-height: 219%;
+    }
+    .balance-card__arrow-block {
+      margin-top: 10px;
+      .balance-card__up-block,
+      .balance-card__down-block {
+        align-items: center;
+        p {
+          font-size: 12px;
+          line-height: 219%;
+        }
+        img {
+          height: 19px;
+        }
+      }
+    }
+  }
 }
 
 .progress-card {
@@ -124,9 +178,24 @@
         color: #22b67d;
       }
     }
+
   }
 
   .progress-card__circle-info {
-    margin-left: 117px;
+    margin-left: 25px;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    width: 50%;
+    .ant-progress-inner.ant-progress-circle-gradient {
+      filter: drop-shadow(0px 8.80091px 8.80091px rgba(0, 0, 0, 0.25));
+    }
+  }
+  @media screen and (max-width: 767px) {
+    justify-content: space-between;
+    .progress-card__circle-info {
+      width: auto;
+      margin-left: 0;
+    }
   }
 }
