--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   background-color: #fff;
+
   // animation: headerAnima 1s backwards;
   & > .container {
     display: flex;
@@ -165,6 +166,9 @@
   }
   .header__logo {
     height: 30px;
+    img {
+      height: 100%;
+    }
   }
   .header__nav {
     display: block;
