--- a/src/components/LK/Button/button.scss
+++ b/src/components/LK/Button/button.scss
@@ -2,11 +2,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 33%;
   p {
     font-size: 14px;
     line-height: 17px;
     text-align: center;
     color: rgba(0, 0, 0, 0.7);
+    @media screen and (max-width: 660px) {
+      font-size: 10px;
+      line-height: 12px;
+      max-width: 90px;
+    }
+  }
+}
+@media screen and (max-width: 622px) {
+  .lk-button + .lk-button {
+    margin-left: 40px;
+  }
+}
+@media screen and (max-width: 522px) {
+  .lk-button + .lk-button {
+    margin-left: 20px;
   }
 }
 
@@ -21,6 +37,16 @@
   width: 80px;
   height: 80px;
   margin-bottom: 20px;
+  @media screen and (max-width: 660px) {
+    margin-bottom: 2px;
+    width: 50px;
+    height: 50px;
+    box-shadow: none;
+    img {
+      max-height: 26px;
+      max-width: 26px;
+    }
+  }
   &:hover {
     background: #dadada;
   }
