--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -1,34 +1,90 @@
 .lk-content {
   margin-top: 13px;
   width: 725px;
-
   margin-left: 121px;
+
+  .lk-content__block {
+    padding: 49px 135px 33px 135px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #ffffff;
+    max-width: 725px;
+  }
   @media screen and (max-width: 1508px) {
     margin-left: 70px;
     width: 630px;
+    .lk-content__block {
+      padding: 35px 45px 33px 45px;
+    }
   }
   @media screen and (max-width: 1208px) {
     margin-left: 15px;
     width: 600px;
   }
-  @media screen and (max-width: 1002px) {
+  @media screen and (max-width: 1058px) {
     margin-left: 0;
     width: 740px;
   }
-  .lk-content__block {
-    padding: 49px 135px 33px 135px;
-    margin-left: auto;
-    margin-right: auto;
-    background: #ffffff;
-    border-radius: 20px;
-    @media screen and (max-width: 1508px) {
-      padding: 49px 85px 33px 85px;
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    position: absolute;
+    margin: 0 20px;
+    border-radius: 0;
+    min-height: calc(100vh - 67px);
+    height: 100%;
+    background: rgba(0, 0, 0, 0.36);
+    .lk-content__block {
+      border-radius: 20px;
+      padding-left: 20px;
+      padding-right: 20px;
+      // width: 80%;
+      background: none;
     }
-    @media screen and (max-width: 1508px) {
-      padding: 49px 45px 33px 45px;
-    }
+  }
+}
+
+.settings-block__close-btn {
+  display: flex; /* используем flex для центрирования содержимого */
+  align-items: center; /* центрируем содержимое кнопки */
+  position: absolute;
+  top: 28px;
+  right: 36px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 10;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  span,
+  span::before,
+  span::after {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    position: absolute;
+    justify-content: flex-end;
+    width: 100%;
+    height: 2px;
+    background-color: #737373;
+  }
+  span {
+    transform: rotate(45deg);
+  }
+  span::before {
+    content: "";
+    top: 0;
+    transform: rotate(0);
+  }
+  span::after {
+    content: "";
+    top: 0;
+    transform: rotate(90deg);
+  }
+  @media screen and (max-width: 767px) {
+    height: 12px;
+    width: 12px;
+    top: 20px;
+    right: 20px;
   }
 }
