--- a/src/components/LK/LKNav/lknav.scss
+++ b/src/components/LK/LKNav/lknav.scss
@@ -1,7 +1,7 @@
 .lk-nav {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   margin-top: 19px;
   @media screen and (max-width: 767px) {
     width: 100%;
@@ -18,7 +18,7 @@
   @media screen and (max-width: 1208px) {
     width: 440px;
   }
-  @media screen and (max-width: 1002px) {
+  @media screen and (max-width: 1058px) {
     width: 740px;
   }
   @media screen and (max-width: 767px) {
@@ -33,7 +33,6 @@
   }
   @media screen and (max-width: 767px) {
     margin-top: 30px;
-
   }
 }
 
@@ -44,22 +43,32 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
-
     color: #000000;
   }
   .lknav__buttons-panel {
     margin: 0 33px;
     margin-top: 40px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     // align-items: center;
   }
-  @media screen and (max-width: 1002px) {
+
+  @media screen and (max-width: 1058px) {
     padding: 36px 115px 46px 115px;
   }
-  @media screen and (max-width: 767px) {
-    padding: 20px 25px;
+  @media screen and (max-width: 622px) {
+    padding: 20px 40px;
+    .lknav__nav-panel-title {
+      font-size: 12px;
+      line-height: 15px;
+    }
+    .lknav__buttons-panel {
+      margin: 0 17px;
+      margin-top: 15px;
+      justify-content: center;
+    }
   }
+
 }
 
 .balance-card {
@@ -108,11 +117,13 @@
       margin-left: 35px;
     }
   }
-  @media screen and (max-width: 1002px) {
+  @media screen and (max-width: 1058px) {
     padding: 24px 97px;
   }
   @media screen and (max-width: 767px) {
     padding: 15px 25px;
+  }
+  @media screen and (max-width: 622px) {
     .balance-card__title {
       font-size: 12px;
       line-height: 219%;
@@ -178,7 +189,6 @@
         color: #22b67d;
       }
     }
-
   }
 
   .progress-card__circle-info {
@@ -190,12 +200,33 @@
     .ant-progress-inner.ant-progress-circle-gradient {
       filter: drop-shadow(0px 8.80091px 8.80091px rgba(0, 0, 0, 0.25));
     }
+    .ant-progress-text {
+      color: #17ca9b;
+    }
   }
   @media screen and (max-width: 767px) {
     justify-content: space-between;
     .progress-card__circle-info {
       width: auto;
       margin-left: 0;
+    }
+    .progress-card__text-info {
+      .progress-card__title {
+        font-size: 12px;
+        line-height: 15px;
+        margin-bottom: 15px;
+      }
+      .progress-card__text-block {
+        margin-bottom: 13px;
+        .progress-card__text_accent {
+          font-size: 16px;
+          line-height: 20px;
+        }
+        .progress-card__text {
+          font-size: 12px;
+          line-height: 15px;
+        }
+      }
     }
   }
 }
