--- a/src/pages/lk.scss
+++ b/src/pages/lk.scss
@@ -1,22 +1,43 @@
-.lk-page__container {
-  display: flex;
-  justify-content: center;
-  max-width: 1508px;
-  padding: 0 50px 20px; 
-  margin: auto;
-  @media screen and (max-width: 1508px){
-    max-width: 1208px;
-  }
-  @media screen and (max-width: 1208px){
-    max-width: 1000px;
-    padding: 0 20px;
-  }
-  @media screen and (max-width: 1002px){
-    flex-wrap: wrap;
-  }
-}
-
 .lk-page {
   background: #e5e5e5;
   min-height: 100vh;
+  @media screen and (max-width: 767px) {
+    background: white;
+  }
+}
+
+.lk-page__container {
+  display: flex;
+  max-width: 1508px;
+  padding: 0 50px 20px;
+  margin: auto;
+  position: relative;
+  & > .history-block {
+    width: 100%;
+    padding: 20px 30px;
+    border-radius: 20px;
+    background: #17ca9b;
+    text-align: center;
+    .history-block__title {
+      color: white;
+      font-size: 18px;
+      line-height: 22px;
+    }
+    .history-block__rows-list .history-block__row p {
+      color: white;
+      font-size: 14px;
+      line-height: 17px;
+    }
+  }
+  @media screen and (max-width: 1508px) {
+    max-width: 1208px;
+  }
+  @media screen and (max-width: 1208px) {
+    max-width: 1000px;
+    padding: 20px 30px;
+  }
+  @media screen and (max-width: 1058px) {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
