--- a/src/components/LK/Button/button.scss
+++ b/src/components/LK/Button/button.scss
@@ -28,7 +28,7 @@
 
 .lk-button__icon {
   // background: #ffffff;
-  box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   position: relative;
   display: flex;
