--- a/src/components/LK/LKContent/LKDonate/lkdonate.scss
+++ b/src/components/LK/LKContent/LKDonate/lkdonate.scss
@@ -176,7 +176,7 @@
       font-size: 18px;
       line-height: 22px;
       color: rgba(0, 0, 0, 0.7);
-      margin-bottom: 2  0px;
+      margin-bottom: 20px;
       outline: none;
       @media screen and (max-width: 767px) {
         height: 36px;
