--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -106,6 +106,32 @@
     }
     .header__burger-menu-logon {
       margin-top: 60px;
+      .header__profile-block {
+        display: flex;
+        .header__profile-img {
+          width: 45px;
+          height: 45px;
+          border-radius: 50%;
+        }
+        .header__profile-text-block {
+          margin-left: 15px;
+          font-weight: normal;
+          .header__profile-name {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 17px;
+            color: #000000;
+            cursor: pointer;
+          }
+          .header__profile-exit {
+            cursor: pointer;
+            font-size: 12px;
+            line-height: 17px;
+            margin-top: 8px;
+            color: rgba(0, 0, 0, 0.6);
+          }
+        }
+      }
       .header__logon-login {
         display: flex;
         align-items: center;
@@ -172,10 +198,11 @@
   }
   .header__nav {
     display: block;
-    // padding-left: 33%;
     ul {
       padding-left: 0;
       display: flex;
+
+      margin-bottom: 0;
     }
     li {
       list-style: none;
@@ -213,6 +240,21 @@
   }
   .header__logon {
     display: flex;
+    .header__profile-img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      background: #fff;
+    }
+    .header__profile-name {
+      margin-left: 13px;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 219%;
+      display: flex;
+      align-items: center;
+      color: #000000;
+    }
     .header__logon-btn {
       height: 45px;
       padding: 3px 15px;
@@ -236,7 +278,6 @@
 
 @media screen and (max-width: 1515px) {
   .header .header__nav {
-    display: block;
     li a {
       font-size: 16px;
     }
