--- a/src/components/LK/LKContent/LKSettings/lksettings.scss
+++ b/src/components/LK/LKContent/LKSettings/lksettings.scss
@@ -59,6 +59,10 @@
     }
   }
 }
+.settings-block.settings-block_admin {
+  padding-top: 0 !important;
+  width: 100%;
+}
 
 .buttons-block {
   .buttons-block__button {
@@ -207,7 +211,10 @@
   width: 22px;
   height: 22px;
   border-radius: 100px;
-
+  @media screen and (max-width: 767px) {
+    width: 15px;
+    height: 15px;
+  }
   background: linear-gradient(90.6deg, #21b67d 2.8%, #0fdab3 97.2%);
   position: relative;
 }
@@ -238,6 +245,11 @@
   text-align: center;
   color: #000000;
   margin-left: 15px;
+  @media screen and (max-width: 767px) {
+    font-size: 10px;
+    line-height: 12px;
+    color: rgba(0, 0, 0, 0.9);
+  }
 }
 
 .rad-input:checked ~ .rad-text {
